# oventi_forecast-sale

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
EDA/: EDA_retail_forecasting.ipynb
src/forecast_sales/: cli.py  config.py  evaluation.py  features.py  forecasting.py  io.py  preprocessing.py  split.py  training.py
src/forecast_sales.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
