[project]
name = "forecast-sales"
version = "0.1.0"
description = "Monthly retail sales forecasting (agency × sku, 4-month horizon)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "joblib>=1.3",
  "pyarrow>=10.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
